TL-19507 block_current_learning: fixed expand collapse icon in IE11

--- a/blocks/current_learning/less/roots.less
+++ b/blocks/current_learning/less/roots.less
@@ -78,11 +78,11 @@
                     display: none;
                 }
                 .expanded-icon {
-                    display: initial;
+                    display: inherit;
                 }
                 &.collapsed {
                     .collapsed-icon {
-                        display: initial;
+                        display: inherit;
                     }
                     .expanded-icon {
                         display: none;
